--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "add-asset-html-webpack-plugin": "^3.1.3",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.1.0",
     "csv-loader": "^3.0.2",
     "express": "^4.17.1",
